k8s/k8express-service.yml
apiVersion: v1
kind: Service
metadata:
  name: express-ip-service
spec:
  type: LoadBalancer
  selector:
    app: k8express
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
