k8s/k8react-service.yml
apiVersion: v1
kind: Service
metadata:
  name: react-ip-service
spec:
  type: LoadBalancer
  selector:
    app: k8react
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
